OpenSubdiv does not always give same results as Blender own subsurf code with crease edges. #46159

Closed
opened 2015-09-19 01:00:29 +02:00 by pistol ioan · 7 comments

gtx 970; win 10 64

blender-2.75-79c668d-win64

Different result with OpenSubdiv.
Please consult my print screen and the blend file.

Thanks

print.jpg
blend.blend

**gtx 970; win 10 64** **blender-2.75-79c668d-win64** Different result with OpenSubdiv. Please consult my print screen and the blend file. Thanks ![print.jpg](https://archive.blender.org/developer/F234627/print.jpg) [blend.blend](https://archive.blender.org/developer/F234629/blend.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @istoltoto

Added subscriber: @istoltoto

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu14.04 64 bits Nvidia Titan Black

I can confirm the bug with attached blend.

Default subdivision does not act the same on planes and extruded surfaces.
OpenSubdiv acts the same but it means that quads of corners should be divided into triangles to support crease.
OpenSubdiv_Plane.blend

ubuntu14.04 64 bits Nvidia Titan Black I can confirm the bug with attached blend. Default subdivision does not act the same on planes and extruded surfaces. OpenSubdiv acts the same but it means that quads of corners should be divided into triangles to support crease. [OpenSubdiv_Plane.blend](https://archive.blender.org/developer/F234924/OpenSubdiv_Plane.blend)
Bastien Montagne changed title from OpenSubdiv to OpenSubdiv does not always give same results as Blender own subsurf code with crease edges. 2015-09-19 10:38:06 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2015-09-19 10:38:06 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by 8da3c5c1b9

This issue was referenced by 8da3c5c1b9585826209fe3c0cbbead06bda1cfc1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46159
No description provided.