Fix T46159: OpenSubdiv does not always give same results as Blender own subsurf code with crease edges